Add contact panel

--- a/index.html
+++ b/index.html
@@ -14,6 +14,18 @@
 		<div id="content">
 
 			<div id="header">
+				<div id="contact-panel">
+					<h3>Contact</h3>
+					<div id="contact-links">
+						<a href="https://www.facebook.com/CosmotionPictures">
+							<img src="assets/images/facebook_link.png">
+						</a>
+						<a href="http://vimeo.com/cosmotionpictures">
+							<img src="assets/images/vimeo_link.png">
+						</a>
+						<img src="assets/images/gmail_link.png">
+					</div>
+				</div>
 				<h1>Cosmotion Pictures</h1>
 			</div>
 
