Remove vimeo lightbox

--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
 		<title>Cosmotion Pictures</title>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 		<link type="text/css" rel="stylesheet" href="assets/css/index.css">
-		<link type="text/css" rel="stylesheet" href="assets/css/ui-lightness/jquery-ui-1.8.16.custom.css"/>
-		<link type="text/css" rel="stylesheet" href="assets/css/lightbox.min.css"/>
 	</head>
 
 	<body>
@@ -32,13 +30,13 @@
 			<div id="now-playing" class="preview-panel">
 				<h2>Now Playing</h2>
 				<div class="gallery">
-					<a href="http://vimeo.com/102388519" class="video lb_vimeo">
+					<a href="http://vimeo.com/102388519" class="video">
 						<img src="http://i.vimeocdn.com/video/484387138_295x166.jpg">
 					</a>
-					<a href="http://vimeo.com/101950223" class="video lb_vimeo">
+					<a href="http://vimeo.com/101950223" class="video">
 						<img src="http://i.vimeocdn.com/video/483841823_295x166.jpg">
 					</a>
-					<a href="http://vimeo.com/102411701" class="video lb_vimeo">
+					<a href="http://vimeo.com/102411701" class="video">
 						<img src="http://i.vimeocdn.com/video/484413104_295x166.jpg">
 					</a>
 				</div>
@@ -59,16 +57,6 @@
 				</div>
 			</div>
 		</div>
-
-		<script type="text/javascript" src="lib/jquery-1.6.4.min.js"></script>
-		<script type="text/javascript" src="lib/jquery.ui.core.min.js"></script>
-		<script type="text/javascript" src="lib/jquery.ui.widget.min.js"></script>
-		<script type="text/javascript" src="lib/jquery.ui.rlightbox.min.js"></script>
-		<script type="text/javascript">
-			jQuery(function($) {
-				$(".lb_vimeo").rlightbox();
-			});
-		</script>
 
 	</body>
 
