--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
 	<head>
 		<title>Cosmotion Pictures</title>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+		<script type="text/javascript" src="lib/jquery-2.1.3.min.js"></script>
+		<script type="text/javascript" src="lib/html5lightbox.js"></script>
 		<link type="text/css" rel="stylesheet" href="assets/css/index.css">
+		<script type="text/javascript">
+    		var html5lightbox_options = {
+        		skinsfoldername: "../assets/images/lightbox_skin"
+    		};
+		</script>
 	</head>
 
 	<body>
@@ -30,13 +37,13 @@
 			<div id="now-playing" class="preview-panel">
 				<h2>Now Playing</h2>
 				<div class="gallery">
-					<a href="http://vimeo.com/102388519" class="video">
+					<a href="http://vimeo.com/102388519" class="video html5lightbox">
 						<img src="http://i.vimeocdn.com/video/484387138_295x166.jpg">
 					</a>
-					<a href="http://vimeo.com/101950223" class="video">
+					<a href="http://vimeo.com/101950223" class="video html5lightbox">
 						<img src="http://i.vimeocdn.com/video/483841823_295x166.jpg">
 					</a>
-					<a href="http://vimeo.com/102411701" class="video">
+					<a href="http://vimeo.com/102411701" class="video html5lightbox">
 						<img src="http://i.vimeocdn.com/video/484413104_295x166.jpg">
 					</a>
 				</div>
