Fix broken player links

--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
 			<div id="now-playing" class="preview-panel">
 				<h2>Now Playing</h2>
 				<div class="gallery">
-					<a href="http://vimeo.com/102388519" class="video html5lightbox">
+					<a href="http://player.vimeo.com/video/54815271?title=0&byline=0&portrait=0" class="video html5lightbox">
 						<img src="http://i.vimeocdn.com/video/484387138_295x166.jpg">
 					</a>
-					<a href="http://vimeo.com/101950223" class="video html5lightbox">
+					<a href="http://player.vimeo.com/video/54815271?title=0&byline=0&portrait=0" class="video html5lightbox">
 						<img src="http://i.vimeocdn.com/video/483841823_295x166.jpg">
 					</a>
-					<a href="http://vimeo.com/102411701" class="video html5lightbox">
+					<a href="http://player.vimeo.com/video/54815271?title=0&byline=0&portrait=0" class="video html5lightbox">
 						<img src="http://i.vimeocdn.com/video/484413104_295x166.jpg">
 					</a>
 				</div>
